--- a/templates/index.html
+++ b/templates/index.html
@@ -406,8 +406,12 @@ margin-top:20%;
     
                 </div >
                 <div class="imgContainer">
+                    <img id="image1" src="{{ url_for('cmr1video') }}" class="img1">
+                    <img id="image1" src="{{ url_for('cmr2video') }}" class="img1">
                     <img id="image1" src="{{ url_for('gvp1video') }}" class="img1">
                     <img id="image1" src="{{ url_for('gvp2video') }}" class="img1">
+                    <img id="image1" src="{{ url_for('palm1video') }}" class="img1">
+                    
                 
                 </div>
                 <div class="list-container">
